<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Maven-Cucumber-BDD</groupId>
	<artifactId>Maven-Cucumber-BDD</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Maven-Cucumber-BDD</name>

	<properties>
		<cucumber.version> 1.2.5 </cucumber.version>
		<selenium.version> 3.141.59 </selenium.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<faker.version>1.0.1</faker.version>
		<allure.version>2.13.5</allure.version>
		<report.version>3.20.0</report.version>
		<webdrivermanager.version>5.0.2</webdrivermanager.version>
		<log4j.version>1.2.16</log4j.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>${faker.version}</version>
		</dependency>

		<dependency>
			<groupId>org.aeonbits.owner</groupId>
			<artifactId>owner</artifactId>
			<version>1.0.12</version>
		</dependency>

		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-testng</artifactId>
			<version>${allure.version}</version>
		</dependency>

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>${report.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Compile code -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- Run testcase/ test suite -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<checkBuildResult>false</checkBuildResult>
					<parallel>classes</parallel>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/*/TestRunner.java</include>
					</includes>
				</configuration>
			</plugin>

<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
<!-- 				<version>2.22.2</version> -->
<!-- 				<configuration> -->
<!-- 					<includes> -->
<!-- 						<include>**/*/TestRunner.java</include> -->
<!-- 					</includes> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->

			<!-- Generate report -->
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>${report.version}</version>
				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>NOPCOMMERCE CUCUMBER REPORT</projectName>
							<outputDirectory>${project.build.directory}/site/cucumber-reporting</outputDirectory>
							<inputDirectory>${project.build.directory}/site</inputDirectory>
							<jsonFiles>
								<param>**/*.json</param>
							</jsonFiles>
							<checkBuildResult>false</checkBuildResult>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>